# acore

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  README.rst  check_for_warnings.sh  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cicd.yml  pylint.yml  tox-gha.yml  updt_markdowns.yml
acore/: __init__.py  ckg_analytics_core.py  correlation_analysis.py  differential_regulation.py  enrichment_analysis.py  exploratory_analysis.py  imputation_analysis.py  kaplan_meier_analysis.py  multiple_testing.py  network_analysis.py  normalization_analysis.py  power_analysis.py  publications_analysis.py  tda_analysis.py  utils.py
acore/decomposition/: pca.py
acore/io/: __init__.py  pride.py  uniprot.py
acore/normalization/: __init__.py  strategies.py
docs/: .gitignore  Makefile  README.md  authors.md  conf.py  contributing.md  fetch_files.py  history.md  index.md  index.rst  installation.rst  llms.md  llms_full_describe.md  split_readme.py  usage.rst
docs/api_examples/: ANCOVA_analysis.ipynb  ANCOVA_analysis.py  ANCOVA_analysis_draft.ipynb  Download_PRIDE_data.ipynb  Download_PRIDE_data.py  batch_correction.ipynb  batch_correction.py  diff_regulation.ipynb  diff_regulation.py  diff_regulation_ancova.ipynb  diff_regulation_ancova.py  diff_regulation_anova_more_than_two_groups.ipynb  diff_regulation_anova_more_than_two_groups.py  diff_regulation_anova_ttest_two_groups.ipynb  diff_regulation_anova_ttest_two_groups.py  drift_correction.ipynb  drift_correction.py  enrichment_analysis.ipynb  enrichment_analysis.py  exploratory_analysis.ipynb  exploratory_analysis.py  filter_metabolomics.ipynb  filter_metabolomics.py  imputation.ipynb  imputation.py  imputation_metabolomics.ipynb  imputation_metabolomics.py  normalization_analysis.ipynb  normalization_analysis.py  ovarian_cancer.ipynb  ovarian_cancer.py  permutation_testing.ipynb  permutation_testing.py
docs/example_data/: Download_PRIDE_data.py  MTBLS13411.md  alzheimer_proteomics.ipynb  alzheimer_proteomics.py
docs/markdown_ref/: acore.batch_correction.md  acore.correlation_analysis.md  (+21 more)
example_data/: README.md
tests/: test_correlation.py  test_differential_regulation.py  test_enrichment.py  test_exploratory.py  test_filter_metabolomics.py  test_imputation.py  test_normalization.py  test_permutation_test.py
(+67 files in other folders)
